Updated Jeffrey profile

--- a/index.html
+++ b/index.html
@@ -25,6 +25,26 @@ Example
 
                     <p>@Shawn Jones (Instructor)</p>
                 </section>
+                <div class="clearfix"></div>
+
+            </div>
+
+            <div class="card">
+
+                 <section class="thumbnail">
+                    <img width="100" src="https://avatars3.githubusercontent.com/u/31826015?s=460&v=4" alt="jeffrey's thumbnail" />
+                </section>
+
+                <section class="info">
+                    <p>Jeffrey Williams</p>
+
+                    <P>Teaching Assitant</P>
+
+                    <p>jeffreywilliams.b@gmail.com</p>
+
+                    <p>@TA-Jeffrey (TA)</p>
+                </section>
+
 
                 <div class="clearfix"></div>
             </div>
