--- a/index.html
+++ b/index.html
@@ -13,17 +13,34 @@ Example
 
             <div class="card">
                 <section class="thumbnail">
-                    <img width="100" src="image/shawn_thumbnail.jpg" alt="shawn's thumbnail" />
+                    <img width="100" src="image/Untitled-1.png" alt="kerry's thumbnail" />
                 </section>
 
                 <section class="info">
-                    <p>Shawn Jones</p>
+                    <p>Kerry Myles</p>
 
-                    <P>Instructor</P>
+                    <P>Student</P>
 
-                    <p>shawn.greg.jones@gmail.com</p>
+                    <p>kmyles82@gmail.com</p>
 
-                    <p>@Shawn Jones (Instructor)</p>
+                    <p>Aspiring Full Stack Developer</p>
+                </section>
+
+                <div class="clearfix"></div>
+            </div>
+            <div class="card">
+                <section class="thumbnail">
+                    <img width="100" src="image/stiz_team_busa.png" alt="Team_Busa's thumbnail" />
+                </section>
+
+                <section class="info">
+                    <p>Team Busa</p>
+
+                    <P>Drag Racer</P>
+
+                    <p>team_busa@gmail.com</p>
+
+                    <p>Hall Street Top 10r</p>
                 </section>
 
                 <div class="clearfix"></div>
