--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@ Example
 
             <div class="card">
                 <section class="thumbnail">
-                    <img width="100" src="image/shawn_thumbnail.jpg" alt="shawn's thumbnail" />
+                    <img width="100" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS8lxHG97GjcY5EMWmNQ6R6UJl62bf52mKdelOIZzUjtp8dZFtJXA" alt="shawn's thumbnail" />
                 </section>
 
                 <section class="info">
-                    <p>Shawn Jones</p>
+                    <p>Shawn Diddy Jones</p>
 
-                    <P>Instructor</P>
+                    <P>Big Teach</P>
 
                     <p>shawn.greg.jones@gmail.com</p>
 
