forgot to change alt attribute on img tag

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Example
 
             <div class="card">
                     <section class="thumbnail">
-                        <img width="100" src="image/Untitled-1.png" alt="kerry's thumbnail" />
+                        <img width="100" src="image/Untitled-1.png" alt="shawn's thumbnail" />
                     </section>
     
                     <section class="info">
