--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@ Example
                     <p>@Shawn Jones (Instructor)</p>
                 </section>
 
+                <section class="thumbnail">
+                    <img width="100" src="C:\Users\Lucas\Desktop\Photos\Cover Photo.jpeg" alt="lucas' thumbnail" />
+                </section>
+
+                <section class="info">
+                    <p>Lucas Cima</p>
+
+                    <P>Teaching Assistant</P>
+
+                    <p>lucas.cima92@gmail.com</p>
+
+                    <p>@TA_Lucas_Cima/p>
+                </section>
+
                 <div class="clearfix"></div>
             </div>
         </div>
